WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183710
Correct debug assertion in Range::borderAndTextRects
https://bugs.webkit.org/show_bug.cgi?id=183710
Summary
Correct debug assertion in Range::borderAndTextRects
Brent Fulgham
Reported
2018-03-16 15:30:50 PDT
A debug assertion will fire if Range::borderAndTextRects is asked to evaluate a set of selected elements, where one of the elements does not have a parent. We should consider a nullptr parent as satisfying the condition of a parent not being present in the selection set.
Attachments
Patch
(3.62 KB, patch)
2018-03-16 17:01 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2018-03-16 15:31:17 PDT
<
rdar://problem/38466976
>
Brent Fulgham
Comment 2
2018-03-16 17:01:08 PDT
Created
attachment 335983
[details]
Patch
WebKit Commit Bot
Comment 3
2018-03-16 23:44:45 PDT
Comment on
attachment 335983
[details]
Patch Clearing flags on attachment: 335983 Committed
r229695
: <
https://trac.webkit.org/changeset/229695
>
WebKit Commit Bot
Comment 4
2018-03-16 23:44:46 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5
2018-03-19 09:14:29 PDT
The problem isn’t the assertion. The problem is that in production builds if we pass in null, contains might return true! That’s what the assertion is communicating.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug